fix: alignment issue in task detail

--- a/src/components/ciPipeline/ciPipeline.scss
+++ b/src/components/ciPipeline/ciPipeline.scss
@@ -343,7 +343,8 @@
 
 .row-container {
     display: grid;
-    grid-template-columns: 220px auto;
+    grid-template-columns: 250px auto;
+    column-gap: 6px;
 
     .radio-group {
         justify-content: flex-start;
